--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,24 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
+/laradock/.idea
+/laradock/logs
+/laradock/data
+/laradock/.env
+/laradock/.project
+/laradock/.docker-sync
+/laradock/jenkins/jenkins_home
+
+/laradock/logstash/pipeline/*.conf
+/laradock/logstash/config/pipelines.yml
+
+/laradock/nginx/ssl/*.crt
+/laradock/nginx/ssl/*.key
+/laradock/nginx/ssl/*.csr
+
+/laradock/.devcontainer/*
+/laradock/!/.devcontainer/devcontainer.example.json
+/laradock/!/.devcontainer/docker-compose.extend-example.yml
+
+/laradock/docker-compose.custom.yml
