--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/livewire": "^1.3",
         "lucascudo/laravel-pt-br-localization": "^1.1",
         "predis/predis": "^1.1",
+        "unisharp/laravel-filemanager": "^2.1",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
