--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "jquery-datetimepicker": "^2.5.21",
         "select2": "^4.0.13"
     }
 }
