--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+QUEUE_HOST=
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -46,3 +47,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 DISQUS_HOST=
+HUBSPOT_SCRIPT=
