--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "albertcht/invisible-recaptcha": "^1.9",
         "artesaos/seotools": "^0.18.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jacobbennett/laravel-http2serverpush": "^5.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "livewire/livewire": "^1.3",
         "lucascudo/laravel-pt-br-localization": "^1.1",
         "predis/predis": "^1.1",
         "spatie/laravel-sitemap": "^5.7",
