--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ DISQUS_HOST=
 HUBSPOT_SCRIPT=
 GOOGLE_ANALYTICS_ID=
 GOOGLE_GTM=
+INVISIBLE_RECAPTCHA_SITEKEY=
+INVISIBLE_RECAPTCHA_SECRETKEY=
+GOOGLE_RECAPTCHA_BADGEHIDE=
+GOOGLE_RECAPTCHA_DEBUG=
